--- a/templates/logs.html
+++ b/templates/logs.html
@@ -13,7 +13,7 @@
 
     {% block content %}
         <div class="container mt-3">
-            <h2 style="color:rgb(172, 172, 161); font-weight: bold; margin-bottom: 30px;">Logs</h2>
+            <h2 style="color:rgb(172, 172, 161); font-weight: bold; margin-bottom: 30px;">Logs Sistema</h2>
             
             <div class="row mb-4">
                 <div class="col-md-12 text-center">
