--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,6 +15,7 @@
                 <li><a href="{{ url_for('email') }}" class="{% if request.endpoint == 'email' %}active{% endif %}">Email Manual</a></li>
                 <li><a href="{{ url_for('config') }}" class="{% if request.endpoint == 'config' %}active{% endif %}">Configurações</a></li>
                 <li><a href="{{ url_for('logs') }}" class="{% if request.endpoint == 'logs' %}active{% endif %}">Logs</a></li>
+                <li><a href="{{ url_for('relatorios') }}" class="{% if request.endpoint == 'relatorios' %}active{% endif %}">Relatórios</a></li>
             </ul>
         </nav>
     </header>
